src/test/deca/syntax/invalid/synt/include_inMain.deca
// Description:
//    include dans le main
//    syntaxiquement incorrect
//
// Resultats:
//    Ligne 13 : mismatched input 'class' expecting {...}
//
// Historique:
//    cree le 11/01/2023
//

{
    #include "Math.decah"
}